test/negative/t29.mli.expected

*******************************
********** Parsed file ********
*******************************
exception E of float list 
val f : 'a -> 'a[@@gospel
                  {| x = f y
    raises E l -> match l with
                  | [] -> false
                  | y :: ys -> y = 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

exception E of float list 

val f : 'a -> 'a
(*@ x = f y
    with ...
     *)
File "t29.mli", line 17, characters 31-32:
Error: This term has type `float' but a term was expected of type `integer'.
